adding playerlist. trying to have a button lead to random generation of a player profile, not sure why it's not showing up (also have to make a new page for said random profile)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!--<html>
     <button onclick = "searchPlayer()">Get Random Player</button>
     <h1 id = "name"></h1>
     <h3 id = "team"></h3>
@@ -6,4 +6,14 @@
     <h3 id = "height"></h3>
     <h3 id = "weight"></h3>
     <script src ="player.js" ></script>
-</html>
+</html>-->
+
+<html>
+<head>
+    <script src="player.js"></script>
+</head>
+<body onload="listButtons(25); generateTable(25); listPlayers(1,25)">
+    
+    <button onclick = "searchPlayer()">Get Random Player</button>
+    
+</body>
