re-adding sarah's page for generating a random player's facts

--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
-<!--<html>
-    <button onclick = "searchPlayer()">Get Random Player</button>
-    <h1 id = "name"></h1>
-    <h3 id = "team"></h3>
-    <h3 id = "position"></h3>
-    <h3 id = "height"></h3>
-    <h3 id = "weight"></h3>
-    <script src ="player.js" ></script>
-</html>-->
-
+<!DOCTYPE html>
 <html>
+
 <head>
     <script src="player.js"></script>
 </head>
 <body onload="listButtons(25); generateTable(25); listPlayers(1,25)">
     
-    <button onclick = "searchPlayer()">Get Random Player</button>
-    
 </body>
+
+</html>
